Bug 101775 - Xorg segfault since 147d7fb "st/mesa: add a winsys buffers list in st_context"
Summary: Xorg segfault since 147d7fb "st/mesa: add a winsys buffers list in st_context"
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-13 07:16 UTC by Christoph Haag
Modified: 2017-07-14 02:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log with a bit of a backtrace (7.03 KB, application/x-trash)
2017-07-13 07:16 UTC, Christoph Haag
Details

Description Christoph Haag 2017-07-13 07:16:48 UTC
Created attachment 132657 [details]
xorg log with a bit of a backtrace

https://cgit.freedesktop.org/mesa/mesa/commit/?id=147d7fb772a7e6b5207c70d02d133af324b0ccf2

Happens with radeonsi on RX 480 when starting X, every time. I only bisected, so no proper debug backtrace, but if necessary I can make one.

Reported in Mesa core because it doesn't look radeonsi specific.
Comment 1 Michel Dänzer 2017-07-14 02:21:34 UTC
Thanks for the report, fixed in Git:

Module: Mesa
Branch: master
Commit: 655a32f729a46176c1fc0c1727b33c15c69cad78
URL:    http://cgit.freedesktop.org/mesa/mesa/commit/?id=655a32f729a46176c1fc0c1727b33c15c69cad78

Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Thu Jul 13 01:21:00 2017 -0600

st/mesa: Handle st_framebuffer_create returning NULL


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.